# Presentations

./: .gitmodules  README.md  asset-manifest.json  relink.sh  service-worker.js
MUC++_delegates/benchmark/: CoroBenchmark.cpp  corotask.h
MUC++_delegates/reveal/: paraiso-dark.css
MeetingC++2017/: index.html  present.md  update.sh
MeetingC++2017/example/: heap_function.hpp  inline_function.hpp  variant_function.hpp  vtable.hpp
MeetingC++Jan2017_delegates/: present.md
MeetingC++Jan2017_delegates/benchmark/: DelegateBenchmark.cpp  Source.cpp  Utility.h
MeetingC++Jan2017_delegates/reveal/: index.html
_style/: index.html
_style/theme/: ariake-dark.css
ceci-bad-alloc/: present.md
cppcon-2017-web-service/: index.html
cppcon-2017-web-service/example/client/strawpoll/: package-lock.json  package.json
cppcon-2017-web-service/example/client/strawpoll/src/: App.css  App.js
cppcon-2017-web-service/example/server/: Benchmark.md
cppcon-2017-web-service/example/server/beast/: CMakeLists.txt
cppcon-2017-web-service/example/server/strawpoll/flatbuffers/: flatbuffers.h
cppcon-2017-web-service/style/theme/: ariake-dark.css
cppcon2017WebService/: .gitignore  index.html  present.md  update.sh
cppcon2017WebService/assets/: present.md
cppcon2017WebService/example/client/strawpoll/: README.md  nginx.conf  package-lock.json  package.json
cppcon2017WebService/example/client/strawpoll/src/: App.css  App.js  index.css  strawpoll_generated.js
cppcon2017WebService/example/server/beast/: README.md  configure.sh
cppcon2017WebService/example/server/beast/src/: CMakeLists.txt  main.cpp
cppcon2017WebService/example/server/strawpoll/: strawpoll.fbs  strawpoll.hpp  strawpoll_generated.h
cppcon2017WebService/example/server/uWebSockets/: .build-tools.cson  CMakeLists.txt  README.md  update_fb.sh
cppcon2017WebService/example/server/uWebSockets/include/: strawpoll.fbs  strawpoll.hpp  strawpoll_generated.h
cppcon2017WebService/example/server/uWebSockets/lib/: CMakeLists.txt
cppcon2017WebService/example/server/uWebSockets/src/: CMakeLists.txt  main.cpp
cppcon2017WebService/style/syntax/: ariake-dark.css
cppcon2017WebService/style/theme/: ariake-dark.css
docs/: asset-manifest.json  index.html  service-worker.js
docs/static/css/: main.3ca110b7.css
docs/static/js/: main.5a99fcad.js  main.5a99fcad.js.map
fake-std/: present.md
old/: README.md
old/muc-pp-delegates/: README.md
retpoline/: present.md
retpoline/assets/: entkopi.sh
rust-stable-sort/: present.md
static/css/: main.3ca110b7.css.map
static/js/: main.e4af42a9.js  main.e4af42a9.js.map
(+7 files in other folders)
